refactor: add bearer swagger
